force-app/main/default/objects/List_Metadata__c/List_Metadata__c.object-meta.xml
<CustomObject>
    <description>Object defines metadata for dependent 2 level list in LWC</description>
    <label>List Metadata</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>List Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>