force-app/main/default/objects/List_Metadata__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Active True display in a list, control what value to show on selector component</description>
    <inlineHelpText>Control what value to show on selector component</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>