force-app/main/default/objects/List_Metadata__c/fields/Child_Label__c.field-meta.xml
<CustomField>
    <fullName>Child_Label__c</fullName>
    <description>Clild Label to display</description>
    <label>Child Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>