force-app/main/default/objects/List_Metadata__c/fields/Child_Value__c.field-meta.xml
<CustomField>
    <fullName>Child_Value__c</fullName>
    <description>Child field Value</description>
    <label>Child Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>