force-app/main/default/objects/List_Metadata__c/fields/Reason_Label__c.field-meta.xml
<CustomField>
    <fullName>Reason_Label__c</fullName>
    <description>Label data to display</description>
    <inlineHelpText>Label data to display</inlineHelpText>
    <label>Reason Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>