force-app/main/default/objects/List_Metadata__c/fields/Reason_Value__c.field-meta.xml
<CustomField>
    <fullName>Reason_Value__c</fullName>
    <description>Main control field</description>
    <label>Reason Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>